--- a/cambio-service/src/main/resources/application.yml
+++ b/cambio-service/src/main/resources/application.yml
@@ -15,3 +15,11 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+  cloud:
+    zookeeper:
+      discovery:
+        enabled: true
+      connect-string: localhost:2181
+logging:
+  level:
+    '[org.apache.zookeeper.ClientCnxn]': WARN
