--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     url: jdbc:mysql://localhost:3306/book_service?useTimezone=true&serverTimezone=UTC
     username: root
     password: example
+  cloud:
+    zookeeper:
+      discovery:
+        enabled: true
+      connect-string: localhost:2181
   jpa:
     hibernate:
       ddl-auto: none
@@ -15,3 +20,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+logging:
+  level:
+    '[org.apache.zookeeper.ClientCnxn]': WARN
