--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -1,5 +1,21 @@
 server:
   port: 8100
+resilience4j:
+#  retry:
+#    instances:
+#      foo-bar:
+#        max-attempts: 5
+#        wait-duration: 1s
+#        enable-exponential-backoff: true
+#  ratelimiter:
+#    instances:
+#      default:
+#        limit-for-period: 2
+#        limit-refresh-period: 10s
+  bulkhead:
+    instances:
+      default:
+        max-concurrent-calls: 10
 spring:
   application:
     name: book-service
